[project]
name = "pyrobosim"
version = "4.3.3"
description = "ROS 2 enabled 2D mobile robot simulator for behavior prototyping."

[tool.pytest.ini]
addopts = "--ignore=dependencies"

[tool.mypy]
strict = true
disable_error_code = "import-untyped"
disallow_untyped_calls = false
disallow_untyped_decorators = false
explicit_package_bases = true
implicit_reexport = true
warn_unused_ignores = false
