[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrobosim"
version = "4.3.3"
description = "ROS 2 enabled 2D mobile robot simulator for behavior prototyping."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Sebastian Castro", email = "sebas.a.castro@gmail.com" },
]
urls = { "Homepage" = "https://github.com/sea-bass/pyrobosim" }

dependencies = [
  "adjustText",
  "astar",
  "matplotlib",
  "numpy",
  "pycollada",
  "PySide6>=6.4.0",
  "PyYAML",
  "shapely>=2.0.1",
  "scipy",
  "transforms3d",
  "trimesh",
  "typing_extensions"
]

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
# Keep room for future extras; none were defined in setup.py
dev = ["pytest", "mypy"]

[tool.setuptools]
package-data = { "pyrobosim" = ["data/**"] }
