[project]
name = "pyrobosim_ros"
version = "4.3.3"
description = "ROS 2 interface to PyRoboSim."
authors = [ { name = "Sebastian Castro", email = "sebas.a.castro@gmail.com" } ]
readme = "README.md"
license = { text = "MIT" }
urls = { "Homepage" = "https://github.com/sea-bass/pyrobosim" }
dependencies = [
    "pyrobosim",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
